# fintools-public

./: .gitignore  BUILD.bazel  README.md  WORKSPACE  bazel-bin  bazel-fintools-public  bazel-out  bazel-testlogs  deps.bzl  go.mod  go.sum  macros.bzl
.github/workflows/: release.yml  test.yml
cmd/buildium-csv-read/: BUILD.bazel  main.go
cmd/buildium-income-statement-detailed-read/: BUILD.bazel  main.go  main_test.go
cmd/ofxparse/: BUILD.bazel  main.go
cmd/paystub/: BUILD.bazel  main.go
cmd/payxml/: BUILD.bazel  main.go
pkg/buildium/: BUILD.bazel  pkg.go
pkg/cfg/: BUILD.bazel  pkg.go
pkg/csv2/: BUILD.bazel  raw.go  raw_test.go  report.go  report_test.go
pkg/draw/: BUILD.bazel  draw.go
pkg/index/: BUILD.bazel  pkg.go
pkg/tiller/: BUILD.bazel  pkg.go  pkg_test.go
pkg/tx/: BUILD.bazel  tx.go
pkg/xml/: .gitignore  BUILD.bazel  README.md  bbox.go  layout.go  query.go  query_test.go  textline.go  xml.go  xml_test.go
