load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library", "go_test")

go_library(
    name = "buildium-income-statement-detailed-read_lib",
    srcs = ["main.go"],
    importpath = "github.com/filmil/fintools-public/cmd/buildium-income-statement-detailed-read",
    visibility = ["//visibility:private"],
    deps = [
        "//pkg/buildium",
        "//pkg/cfg",
        "//pkg/csv2",
        "//pkg/tiller",
    ],
)

go_binary(
    name = "buildium-income-statement-detailed-read",
    embed = [":buildium-income-statement-detailed-read_lib"],
    visibility = ["//visibility:public"],
)

go_test(
    name = "buildium-income-statement-detailed-read_test",
    srcs = ["main_test.go"],
    embed = [":buildium-income-statement-detailed-read_lib"],
    size = "small",
)
