load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "xml",
    srcs = [
        "bbox.go",
        "layout.go",
        "query.go",
        "textline.go",
        "xml.go",
    ],
    importpath = "github.com/filmil/fintools-public/pkg/xml",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/tx",
        "@com_github_golang_glog//:glog",
        "@com_github_pkg_errors//:errors",
    ],
)

go_test(
    name = "xml_test",
    srcs = [
        "query_test.go",
        "xml_test.go",
    ],
    embed = [":xml"],
    deps = [
        "//pkg/tx",
        "@com_github_google_go_cmp//cmp",
    ],
)
